<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.2</version>
        <relativePath/>
    </parent>

    <artifactId>open-fhir</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <groupId>com.medblocks.openfhir</groupId>

    <name>openFHIR</name>
    <description>An Engine implementing FHIR Connect specification for bi-directional mapping between openEHR and FHIR.</description>
    <url>https://github.com/medblocks/openFHIR</url>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>gasperr</id>
            <name>Gasper Andrejc</name>
            <email>gasper.andrejc@syntaric.com</email>
            <roles>
                <role>Lead Developer</role>
            </roles>
            <organization>Syntaric d.o.o.</organization>
        </developer>
        <developer>
            <id>sidharth</id>
            <name>Sidharth Ramesh</name>
            <email>sidharth@medblocks.com</email>
            <roles>
                <role>Developer</role>
            </roles>
            <organization>Medblocks Inc.</organization>
        </developer>
    </developers>

    <properties>
        <java.version>17</java.version>
        <archie.version>3.11.0</archie.version>
        <hapi-fhir.version>7.2.1</hapi-fhir.version>
        <jjwt.version>0.12.6</jjwt.version>
        <snakeyaml.version>2.2</snakeyaml.version>
        <ucum.version>1.0.8</ucum.version>
        <ehrbase.version>2.14.0</ehrbase.version>
        <json-schema-validator.version>2.2.14</json-schema-validator.version>
        <junit.version>4.13.2</junit.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Nedap Archie -->
            <dependency>
                <groupId>com.nedap.healthcare.archie</groupId>
                <artifactId>archie-all</artifactId>
                <version>${archie.version}</version>
            </dependency>

            <!-- HAPI FHIR -->
            <dependency>
                <groupId>ca.uhn.hapi.fhir</groupId>
                <artifactId>hapi-fhir-structures-r4</artifactId>
                <version>${hapi-fhir.version}</version>
            </dependency>
            <dependency>
                <groupId>ca.uhn.hapi.fhir</groupId>
                <artifactId>hapi-fhir-base</artifactId>
                <version>${hapi-fhir.version}</version>
            </dependency>
            <dependency>
                <groupId>ca.uhn.hapi.fhir</groupId>
                <artifactId>hapi-fhir-validation-resources-r4</artifactId>
                <version>${hapi-fhir.version}</version>
            </dependency>
            <dependency>
                <groupId>ca.uhn.hapi.fhir</groupId>
                <artifactId>hapi-fhir-caching-caffeine</artifactId>
                <version>${hapi-fhir.version}</version>
            </dependency>

            <!-- UCUM -->
            <dependency>
                <groupId>org.fhir</groupId>
                <artifactId>ucum</artifactId>
                <version>${ucum.version}</version>
            </dependency>

            <!-- JWT -->
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt</artifactId>
                <version>${jjwt.version}</version>
            </dependency>

            <!-- SnakeYAML -->
            <dependency>
                <groupId>org.yaml</groupId>
                <artifactId>snakeyaml</artifactId>
                <version>${snakeyaml.version}</version>
            </dependency>

            <!-- JUnit -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            
            <!-- EHRBase -->
            <dependency>
                <groupId>org.ehrbase.openehr.sdk</groupId>
                <artifactId>serialisation</artifactId>
                <version>${ehrbase.version}</version>
            </dependency>
            <dependency>
                <groupId>org.ehrbase.openehr.sdk</groupId>
                <artifactId>util</artifactId>
                <version>${ehrbase.version}</version>
            </dependency>
            <dependency>
                <groupId>org.ehrbase.openehr.sdk</groupId>
                <artifactId>web-template</artifactId>
                <version>${ehrbase.version}</version>
            </dependency>
            

            <!-- JSON Schema Validator -->
            <dependency>
                <groupId>com.github.java-json-tools</groupId>
                <artifactId>json-schema-validator</artifactId>
                <version>${json-schema-validator.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-mongodb</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt</artifactId>
        </dependency>
        <dependency>
              <groupId>org.junit.vintage</groupId>
              <artifactId>junit-vintage-engine</artifactId>
              <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.nedap.healthcare.archie</groupId>
            <artifactId>archie-all</artifactId>
        </dependency>
        <dependency>
            <groupId>ca.uhn.hapi.fhir</groupId>
            <artifactId>hapi-fhir-structures-r4</artifactId>
        </dependency>
        <dependency>
            <groupId>ca.uhn.hapi.fhir</groupId>
            <artifactId>hapi-fhir-base</artifactId>
        </dependency>
        <dependency>
            <groupId>ca.uhn.hapi.fhir</groupId>
            <artifactId>hapi-fhir-validation-resources-r4</artifactId>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
        </dependency>
        <dependency>
            <groupId>org.fhir</groupId>
            <artifactId>ucum</artifactId>
        </dependency>
        <dependency>
            <groupId>ca.uhn.hapi.fhir</groupId>
            <artifactId>hapi-fhir-caching-caffeine</artifactId>
        </dependency>
        <dependency>
            <groupId>org.ehrbase.openehr.sdk</groupId>
            <artifactId>serialisation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.ehrbase.openehr.sdk</groupId>
            <artifactId>util</artifactId>
        </dependency>
        <dependency>
            <groupId>org.ehrbase.openehr.sdk</groupId>
            <artifactId>web-template</artifactId>
        </dependency>
        <dependency>
            <groupId>com.github.java-json-tools</groupId>
            <artifactId>json-schema-validator</artifactId>
        </dependency>
    </dependencies>
    <build>
      <pluginManagement>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.5.1</version>
            <configuration>
              <argLine>-Duser.timezone=CET</argLine>
              <includes>
                <include>**/*Test.java</include>
                <include>**/*Tests.java</include>
              </includes>
            </configuration>
          </plugin>
        </plugins>
      </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
